--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,9 @@
-gradio==3.30.0
-torch==2.0.1
-transformers==4.30.0
-peft==0.4.0
-yt-dlp==2023.12.1
-stable-whisper==0.2.0
+fastapi==0.115.0
+gradio==4.44.1
+peft==0.13.0
+pydantic==2.8.2
+stable-ts==2.17.4
+torch==2.4.0
+transformers==4.45.1
+uvicorn==0.31.0
+yt-dlp==2024.8.6
